[package]
name = "coding-challenges"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
piston = "0.55.0"
pistoncore-glutin_window = "0.72.0"
piston2d-opengl_graphics = "0.84.0"
vector2d = "2.2.0"
rayon = "1.8.1"
num_cpus = "1.16.0"
font-kit = "0.12.0"

[dependencies.piston2d-graphics]
version = "*"
features = ["glyph_cache_rusttype"]

[profile.release]
debug = true